Didn't get everything in last commit

--- a/kNN.ipynb
+++ b/kNN.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Results and Analysis of kNN Classifier\n",
     "\n",
-    "Results peaked around 86% accuracy for the given dataset using the Manhattan Distance and 90% accuracy using the Euclidean Distance. 13-Nearest Neig"
+    "Results peaked around 86% accuracy for the given dataset using the Manhattan Distance and 90% accuracy using the Euclidean Distance. 13-Nearest Neighbors gave the best results in both circumstances. Using different p-values for the Minkowski Distance measure didn't seem to have a big effect on the classification accuracy"
    ]
   },
   {
